Refactored project structure.